# pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
extract/config/: settings.py
extract/config/constants/: __init__.py
extract/config/metadata/: catalog.yaml  load_yaml.py
extract/config/metadata/uk/: business.yaml  consumer.yaml  labour.yaml  price.yaml  trade.yaml
extract/config/metadata/usa/: consumer.yaml  labour.yaml  money.yaml  price.yaml  trade.yaml
extract/src/: main.py
extract/src/core/: cli.py  flows.py  indicator.py
extract/src/core/flows/: __init__.py  _chain.py  _fetch.py  _parser.py  _utils.py  manager.py
extract/src/core/models/: __init__.py  parsing_schemas.py  pipeline_schemas.py  stg_schemas.py
extract/src/core/parsers/: __init__.py  registry.py
extract/src/core/process/: __init__.py  indicator.py  model.py  parse.py  raw.py  staging.py
extract/src/monitoring/exc_models/: __init__.py  base_exc.py
extract/src/monitoring/logs/: __init__.py  logger.py  setup.py
extract/src/providers/: __init__.py  metamodel.py  retry_http.py
extract/src/providers/bea/: __init__.py  fetch.py  model.py
extract/src/providers/bls/: __init__.py  fetch.py  model.py
extract/src/providers/fred/: __init__.py  fetch.py  model.py
extract/src/providers/ons/: fetch.py  model.py
extract/tests/unit/: test_fetch_bea.py  test_fetch_bls.py  test_fetch_fred.py
src/: main.py
src/config/constants/: utils_constant.py
src/config/metadata/: load_yaml.py
src/pipeline/: orchestrator.py
src/pipeline/processors/: calculation.sql  indicator.py
src/pipeline/routing/: raw.py
src/providers/: metamodel.py  share_state.py
src/providers/bea/: fetch.py
src/providers/bls/: fetch.py
src/providers/fred/: fetch.py
(+36 files in other folders)
