[project]
name = "workspace-analysis"
version = "0.1.0"
package-mode = false
description = "Analysis"
authors = [{ name = "arx", email = "araswandi0@gmail.com" }]
license = { text = "proprietary" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "textual (>=6.5.0,<7.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "pluggy (>=1.6.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "objexplore (>=1.6.3,<2.0.0)",
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "psycopg[c,pool] (>=3.3.4,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "prettier (>=0.0.7,<0.0.8)",
    "dbt-core (>=1.11.11,<2.0.0)",
    "dbt-postgres (>=1.10.0,<2.0.0)",
]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pyright (>=1.1.407,<2.0.0)",
    "ipython (>=9.7.0,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-tornasync (>=0.6.0.post2,<0.7.0)",
    "pytest-trio (>=0.8.0,<0.9.0)",
    "pytest-twisted (>=1.14.3,<2.0.0)",
    "anyio (>=4.13.0,<5.0.0)",
    "twisted (>=25.5.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["extract/tests"]
pythonpath = ["extract"]
